# api/routes/topics.ts
@@ -17,8 +17,7 @@ interface Event {
   description: string | null;
   date_start: string;
   date_end: string | null;
-  participation_type: string;
-  participation_fee: string | null;
+  participation_type: string | null;
   image_url: string | null;
   topic_id: number;
   month: number;
